--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -23,7 +23,7 @@
 
   <!-- Template Main CSS File -->
   <link href="{% static 'assets/css/style.css'%}" rel="stylesheet">
-    <title>AgroTech</title>
+    <title>AgriTech</title>
   </head>
   <body>
 
