add crop recommend module

--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -43,12 +43,12 @@
         <li class="nav-item" >
           <a class="nav-link" aria-current="page" href="{% url 'homepage' %}"><h4>Home</h4></a>
         </li>
-          <!-- <li class="nav-item">
+          <li class="nav-item">
             <a class="nav-link" aria-current="page" href="{% url 'croppredpage' %}"><h4>Crop Prediction</h4></a>
-          </li> -->
-        <!-- <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="{% url 'etradpage' %}"><h4>E-Trading</h4></a>
-        </li> -->
+          </li>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="{% url 'etradpage' %}"><h4>Market-Prices</h4></a>
+        </li>
       </ul>
     </div>
   </div>
