--- a/store/templates/etrade.html
+++ b/store/templates/etrade.html
@@ -26,11 +26,11 @@
           <div class="card-body">
             <h5 class="card-title">{{product.name}}</h5>
             <p class="card-text">{{product.price}}/- {{product.description}}</p>
-            <a
+            <!-- <a
               href="tel:{{product.phoneno}}"
               class="btn btn-light border btn-sm"
-              >Call</a
-            >
+              >sell</a
+            > -->
           </div>
         </div>
         {% endfor %}
