--- a/store/templates/crop_pred.html
+++ b/store/templates/crop_pred.html
@@ -6,10 +6,13 @@
 <div class="text-center">
     <button class="geeks btn btn-primary" onclick="getlocation()">Get Location</button>
     <p id="demo1"></p>
-</div>
+    <div id="locationDisplay" style="display: none; background-color: rgba(255, 255, 255, 0.6); padding: 10px; border-radius: 5px; margin-top: 10px; margin-bottom: 20px;"></div>
+</div>  
+
+<br>
 
 <div class="d-flex justify-content-center">
-    <form id="cropForm" style="width:40%; text-align:center;" class="mx-auto">
+  <form id="cropForm" style="width:40%; text-align:center; background-color: rgba(255, 255, 255, 0.8); padding: 20px; border-radius: 10px;" class="mx-auto">
 
         <div class="mb-3">
             <label class="form-label">Temperature</label>
@@ -32,6 +35,7 @@
 </div>
 
 <br/><br/><br/>
+<br/><br/><br/>
 
 <div id="predictionContainer" style="display: none; text-align: center; padding: 20px; margin-top: 20px; border: 2px solid #007bff; border-radius: 10px; background-color: #f8f9fa;">
   <h2 style="font-family: 'Arial', sans-serif; font-size: 24px; color: #007bff; margin-bottom: 20px; line-height: 1.5;">
@@ -44,14 +48,19 @@
 
 
 <script>
-    // Function to get location
-    var variable1 = document.getElementById("demo1");
+  // Function to get location
+  //var variable1 = document.getElementById("demo1");
+  var variable1 = document.getElementById("locationDisplay");
     function getlocation(){
         navigator.geolocation.getCurrentPosition(showLoc);
     }
     function showLoc(pos){
         variable1.innerHTML = "Latitude: " + pos.coords.latitude + 
-        "<br>Longitude: " + pos.coords.longitude; 
+        "&ensp; Longitude: " + pos.coords.longitude; 
+        variable1.style.display = 'inline';
+        variable1.style.paddingTop = '10px';
+        variable1.style.paddingBottom = '10px';
+        variable1.style.marginBottom = '50px';
     }
 
     // Prediction Logic in JavaScript for Multiple Crops
