--- a/store/templates/index.html
+++ b/store/templates/index.html
@@ -18,6 +18,7 @@
           <div class="col-lg-6" data-aos="fade-right" data-aos-delay="100">
             <h2>About Us</h2>
             <h3>We are developer and Students of SPIT with our project AgroTech</h3>
+            <h4>By Durgesh Mandge with Atanu Debnath</h4>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0" data-aos="fade-left" data-aos-delay="200">
             <p>
@@ -25,8 +26,10 @@
             </p>
             <ul>
               <!-- <li><i class="ri-check-double-line"></i> It gives complete information about what crop to grow, what fertilizers and pesticides to use depending upon land condition and weather conditions.</li> -->
-              <li><i class="ri-check-double-line"></i> It provides a platform that connects farmers directly to consumers or retailers thus, eliminates middlemen.</li>
-              <li><i class="ri-check-double-line"></i> It can be used by both farmers as well as retailers/consumers accordingly.</li>
+              <li><i class="ri-check-double-line"></i> It provides the <b>recommendation of crop</b> based on the soil testing and the weather conditions.</li>
+              <li><i class="ri-check-double-line"></i> It provides live <b>geolocation of farmer's land</b> and based on that peasant can recieve weather forecasting warnings and messages as future scope of application.</li>
+              <li><i class="ri-check-double-line"></i> It provides a platform that connects farmers directly to <b>consumers or retailers</b> thus, eliminates middlemen.</li>
+              <li><i class="ri-check-double-line"></i> It can be used by both farmers as well as retailers/consumers accordingly for <b>e-trading</b>.</li>
             </ul>
           </div>
         </div>
@@ -39,8 +42,8 @@
       <div class="container mb-6">
 
         <div class="text-center" data-aos="zoom-in">
-          <h3>Farmers! Suit up and Call Us..</h3>
-          <p>If you ever feel to reach out to the buyers on our platform, just call us!</p>
+          <h3>Farmers! Suit up and Get Digital..</h3>
+          <p>Soil testing is today's requirement to get most profitable yeild depending on current demand of markets</p>
           <!-- <a class="cta-btn" href="tel:9999999999">Call To Action</a> -->
         </div>
 
